Fix display of header on mobile devices.

--- a/_sass/base/_utility.scss
+++ b/_sass/base/_utility.scss
@@ -110,3 +110,17 @@
   white-space: nowrap;
   width: 1px;
 }
+
+.show-mobile {
+  display: none;
+}
+
+@media (max-width: 576px) {
+  .show-mobile {
+    display: inherit;
+  }
+
+  .hide-mobile {
+    display: none;
+  }
+}
